--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,18 @@
 html
   head
+    link(href='css/index.css', rel='stylesheet')
     script(src='/socket.io/socket.io.js', type='text/javascript')
     script(src='js/index.js', type='text/javascript')
   body
     canvas#data(width=1024, height=256)
     canvas#detailed_frequencies(width=1024, height=512)
     canvas#responsive_frequencies(width=1024, height=512)
+    div#lights
+      div
+      div
+      div
+      div
+      div
+      div
+      div
+      div
